Fix unnecessary path on op-bindings/Makefile

--- a/op-bindings/Makefile
+++ b/op-bindings/Makefile
@@ -3,8 +3,6 @@ SHELL := /usr/bin/env bash
 pkg := bindings
 monorepo-base := $(shell dirname $(realpath .))
 contracts-dir := $(monorepo-base)/packages/tokamak/contracts-bedrock
-hardhat-artifacts-dir := $(monorepo-base)/packages/tokamak/contracts-bedrock
-hardhat-artifact-path := $(monorepo-base)/packages/tokamak/contracts-bedrock/hardhat-artifacts
 
 all: version mkdir bindings
 
@@ -22,7 +20,7 @@ bindings: compile bindings-build
 bindings-build:
 	go run ./gen/main.go \
     -forge-artifacts $(contracts-dir)/forge-artifacts \
-    -hardhat-artifacts $(hardhat-artifacts-dir)/hardhat-artifacts \
+    -hardhat-artifacts $(contracts-dir)/hardhat-artifacts \
     -out ./bindings \
     -forge-contracts ./artifacts.json \
     -hardhat-contracts ./artifacts-hardhat.json \
@@ -31,16 +29,16 @@ bindings-build:
     -monorepo-base $(monorepo-base)
 
 hardhat-bindings:
-	./gen_bindings.sh $(hardhat-artifact-path)/openzeppeline/TransparentUpgradeableProxy.sol/TransparentUpgradeableProxy.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/permit2/Permit2.sol/Permit2.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/swap-router-contracts/QuoterV2.sol/QuoterV2.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/swap-router-contracts/SwapRouter02.sol/SwapRouter02.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/v3-core/UniswapV3Factory.sol/UniswapV3Factory.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/v3-periphery/NFTDescriptor.sol/NFTDescriptor.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/v3-periphery/NonfungiblePositionManager.sol/NonfungiblePositionManager.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/v3-periphery/NonfungibleTokenPositionDescriptor.sol/NonfungibleTokenPositionDescriptor.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/v3-periphery/TickLens.sol/TickLens.json $(pkg)
-	./gen_bindings.sh $(hardhat-artifact-path)/v3-periphery/UniswapInterfaceMulticall.sol/UniswapInterfaceMulticall.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/openzeppeline/TransparentUpgradeableProxy.sol/TransparentUpgradeableProxy.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/permit2/Permit2.sol/Permit2.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/swap-router-contracts/QuoterV2.sol/QuoterV2.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/swap-router-contracts/SwapRouter02.sol/SwapRouter02.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-core/UniswapV3Factory.sol/UniswapV3Factory.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/NFTDescriptor.sol/NFTDescriptor.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/NonfungiblePositionManager.sol/NonfungiblePositionManager.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/NonfungibleTokenPositionDescriptor.sol/NonfungibleTokenPositionDescriptor.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/TickLens.sol/TickLens.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/UniswapInterfaceMulticall.sol/UniswapInterfaceMulticall.json $(pkg)
 
 mkdir:
 	mkdir -p $(pkg)
