--- a/.github/workflows/release-docker-release.yml
+++ b/.github/workflows/release-docker-release.yml
@@ -27,7 +27,10 @@ jobs:
   op-stack-go:
     name: Publish op-stack-go
     needs: [version]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -65,9 +68,10 @@ jobs:
   op-packages:
     name: Publish ${{ matrix.target }}
     needs: [op-stack-go, version]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ ubuntu-latest, macos-latest ]
         target:
           [
             op-node,
@@ -107,9 +111,10 @@ jobs:
   etc:
     name: Publish ${{ matrix.target }}
     needs: [version]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ ubuntu-latest, macos-latest ]
         target: [endpoint-monitor, indexer, op-exporter, proxyd]
     steps:
       - name: Checkout
