feat: change docker image from titan to thanos

--- a/.github/workflows/release-docker-nightly.yml
+++ b/.github/workflows/release-docker-nightly.yml
@@ -57,7 +57,7 @@ jobs:
           context: .
           file: ./ops/docker/op-stack-go/Dockerfile
           push: true
-          tags: onthertech/titan-op-stack-go:${{ needs.version.outputs.nightly-docker-tag }}
+          tags: onthertech/thanos-op-stack-go:${{ needs.version.outputs.nightly-docker-tag }}
           build-args: |
             GITDATE=${{ steps.build_args.outputs.GITDATE }}
             GITCOMMIT=${{ steps.build_args.outputs.GITCOMMIT }}
@@ -100,9 +100,9 @@ jobs:
           context: .
           file: ./${{ matrix.target }}/Dockerfile
           push: true
-          tags: onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
+          tags: onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
           build-args: |
-            OP_STACK_GO_BUILDER=onthertech/titan-op-stack-go:${{ needs.version.outputs.nightly-docker-tag }}
+            OP_STACK_GO_BUILDER=onthertech/thanos-op-stack-go:${{ needs.version.outputs.nightly-docker-tag }}
 
   etc:
     name: Publish ${{ matrix.target }}
@@ -141,7 +141,7 @@ jobs:
           context: .
           file: ./${{ matrix.target }}/Dockerfile
           push: true
-          tags: onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
+          tags: onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
           build-args: |
             GITDATE=${{ steps.build_args.outputs.GITDATE }}
             GITCOMMIT=${{ steps.build_args.outputs.GITCOMMIT }}
@@ -229,7 +229,7 @@ jobs:
           if [ "$ARCHITECTURE" = "aarch64" ]; then
             ARCHITECTURE="arm64"
           fi
-          echo "docker-image-name=onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-$ARCHITECTURE" >> "$GITHUB_OUTPUT"
+          echo "docker-image-name=onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-$ARCHITECTURE" >> "$GITHUB_OUTPUT"
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -281,7 +281,7 @@ jobs:
           if [ "$ARCHITECTURE" = "aarch64" ]; then
             ARCHITECTURE="arm64"
           fi
-          echo "docker-image-name=onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-$ARCHITECTURE" >> "$GITHUB_OUTPUT"
+          echo "docker-image-name=onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-$ARCHITECTURE" >> "$GITHUB_OUTPUT"
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -334,8 +334,8 @@ jobs:
       - name: Create and push manifest
         uses: Noelware/docker-manifest-action@master
         with:
-          inputs: onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
-          images: onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-amd64,onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-arm64
+          inputs: onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}
+          images: onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-amd64,onthertech/thanos-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-arm64
           push: true
 
   update-kustomize:
@@ -363,22 +363,22 @@ jobs:
       - name: Update titan-op-node Kubernetes resources
         run: |
           cd tokamak-infra/titan2/kustomize/overlays/titan-sepolia-test
-          kustomize edit set image onthertech/titan-op-node:${{ needs.version.outputs.nightly-docker-tag}}
+          kustomize edit set image onthertech/thanos-op-node:${{ needs.version.outputs.nightly-docker-tag}}
 
       - name: Update titan-op-proposer Kubernetes resources
         run: |
           cd tokamak-infra/titan2/kustomize/overlays/titan-sepolia-test
-          kustomize edit set image onthertech/titan-op-proposer:${{ needs.version.outputs.nightly-docker-tag}}
+          kustomize edit set image onthertech/thanos-op-proposer:${{ needs.version.outputs.nightly-docker-tag}}
 
       - name: Update titan-op-batcher Kubernetes resources
         run: |
           cd tokamak-infra/titan2/kustomize/overlays/titan-sepolia-test
-          kustomize edit set image onthertech/titan-op-batcher:${{ needs.version.outputs.nightly-docker-tag}}
+          kustomize edit set image onthertech/thanos-op-batcher:${{ needs.version.outputs.nightly-docker-tag}}
 
       - name: Update titan-proxyd Kubernetes resources
         run: |
           cd tokamak-infra/titan2/kustomize/overlays/titan-sepolia-test
-          kustomize edit set image onthertech/titan-proxyd:${{ needs.version.outputs.nightly-docker-tag}}
+          kustomize edit set image onthertech/thanos-proxyd:${{ needs.version.outputs.nightly-docker-tag}}
 
       - name: Show updated Kubernetes resources
         run: |
