--- a/.github/workflows/publish-tokamak-packages.yml
+++ b/.github/workflows/publish-tokamak-packages.yml
@@ -1,4 +1,4 @@
-name: Publish the Titan2 Packages
+name: Publish the Thanos Packages
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - 'release-*'
 
 jobs:
-  release-titan2-packages:
+  release-thanos-packages:
     name: Release
     runs-on: ubuntu-latest
     container:
