[OR-1548] change some action trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
 name: pnpm-monorepo
 
 on:
-  push:
+  pull_request:
     paths:
       - 'op-chain-ops/**'
       - 'packages/**'
+
 jobs:
   pnpm-monorepo:
     runs-on: ubuntu-latest
