--- a/.github/workflows/tokamak-contract-bedrock-test.yml
+++ b/.github/workflows/tokamak-contract-bedrock-test.yml
@@ -1,6 +1,6 @@
 name: 'Tokamak Contract Bedrock Test'
 on:
-  push:
+  pull_request:
     paths:
       - 'op-node/**'
       - 'packages/tokamak/contracts-bedrock/**'
@@ -56,36 +56,36 @@ jobs:
           ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
 
   contracts-bedrock-tests:
-    name: "Contract Bedrock test"
+    name: 'Contract Bedrock test'
     needs: [start-runner]
     runs-on: ${{ needs.start-runner.outputs.label }}
     container:
       image: onthertech/thanos-ci-builder:latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4.1.0
+      - name: Checkout
+        uses: actions/checkout@v4.1.0
 
-    # Declares the repository safe and not under dubious ownership.
-    - name: Add repository to git safe directories
-      run: git config --global --add safe.directory $GITHUB_WORKSPACE
+      # Declares the repository safe and not under dubious ownership.
+      - name: Add repository to git safe directories
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-    - name: Restore Node Modules
-      uses: actions/cache@v3.3.2
-      with:
-        key: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
-        path: node_modules
-        restore-keys: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
+      - name: Restore Node Modules
+        uses: actions/cache@v3.3.2
+        with:
+          key: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
+          path: node_modules
+          restore-keys: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
 
-    - name: Fetch dependencies
-      run: pnpm fetch --frozen-lockfile --prefer-offline
+      - name: Fetch dependencies
+        run: pnpm fetch --frozen-lockfile --prefer-offline
 
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile --offline
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile --offline
 
-    - name: Print forge version
-      run: forge --version
-      working-directory: packages/tokamak/contracts-bedrock
+      - name: Print forge version
+        run: forge --version
+        working-directory: packages/tokamak/contracts-bedrock
 
-    - name: Run pnpm test
-      run: pnpm test
-      working-directory: packages/tokamak/contracts-bedrock
+      - name: Run pnpm test
+        run: pnpm test
+        working-directory: packages/tokamak/contracts-bedrock
