--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -15,6 +15,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
+
       - name: Start EC2 runner
         id: start-ec2-runner
         uses: machulav/ec2-github-runner@v2
@@ -22,7 +23,7 @@ jobs:
           mode: start
           github-token: ${{ secrets.ACCESS_TOKEN }}
           ec2-image-id: ami-01bd9dc38789ab007
-          ec2-instance-type: t4g.2xlarge
+          ec2-instance-type: c7g.4xlarge
           subnet-id: subnet-4aa53021
           security-group-id: sg-03165a21a3ba6e8b3
       - name: Runner status
@@ -94,5 +95,5 @@ jobs:
           DEPLOYMENT_CONTEXT=devnetL1 make devnet-allocs
 
       - name: Run e2e test
-        run: OP_TESTLOG_DISABLE_COLOR=true OP_E2E_DISABLE_PARALLEL=false gotestsum --format=standard-verbose -- -timeout=20m -parallel=8 ./...
+        run: OP_TESTLOG_DISABLE_COLOR=true OP_E2E_DISABLE_PARALLEL=false gotestsum --format=standard-verbose -- -timeout=25m -parallel=16 ./...
         working-directory: op-e2e
