Update minor change on tsconfig.json

--- a/packages/tokamak/contracts-bedrock/tsconfig.json
+++ b/packages/tokamak/contracts-bedrock/tsconfig.json
@@ -4,6 +4,9 @@
     "outDir": "./dist"
   },
   "include": [
+    "deploy-config/**/*",
+    "deploy-config/**/*.json",
+    "scripts/**/*",
     "**/*.ts"
   ]
 }
