--- a/packages/tokamak/core-utils/package.json
+++ b/packages/tokamak/core-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tokamak-network/core-utils",
   "version": "0.0.1",
-  "description": "[Optimism] Core typescript utilities",
+  "description": "[Thanos] Core typescript utilities",
   "main": "dist/index",
   "types": "dist/index",
   "files": [
@@ -25,12 +25,12 @@
     "core",
     "utils"
   ],
-  "homepage": "https://github.com/ethereum-optimism/optimism/tree/develop/packages/core-utils#readme",
+  "homepage": "https://github.com/tokamak-network/tokamak-thanos/tree/main/packages/tokamak/core-utils#readme",
   "license": "MIT",
   "author": "Optimism PBC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ethereum-optimism/optimism.git"
+    "url": "https://github.com/tokamak-network/tokamak-thanos.git"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
