--- a/packages/tokamak/contracts-bedrock/foundry.toml
+++ b/packages/tokamak/contracts-bedrock/foundry.toml
@@ -19,7 +19,8 @@ remappings = [
   '@cwia/=lib/clones-with-immutable-args/src',
   'forge-std/=lib/forge-std/src',
   'ds-test/=lib/forge-std/lib/ds-test/src',
-  'safe-contracts/=lib/safe-contracts/contracts'
+  'safe-contracts/=lib/safe-contracts/contracts',
+  '@lib-keccak/=lib/lib-keccak'
 ]
 extra_output = ['devdoc', 'userdoc', 'metadata', 'storageLayout']
 bytecode_hash = 'none'
