--- a/.github/workflows/tokamak-contract-bedrock-test.yml
+++ b/.github/workflows/tokamak-contract-bedrock-test.yml
@@ -24,15 +24,25 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.ACCESS_TOKEN }}
-          ec2-image-id: ami-01bd9dc38789ab007
+          ec2-image-id: ami-01f36d9fbf17b3974
           ec2-instance-type: t4g.2xlarge
           subnet-id: subnet-4aa53021
           security-group-id: sg-03165a21a3ba6e8b3
+          pre-runner-script: shutdown -P +40
       - name: Runner status
         id: status
         run: |
           echo "Runner label:" ${{ steps.start-ec2-runner.outputs.label }}
           echo "EC2 instances id:" ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
+
+  ec2-update-attribute:
+    name: Update EC2 shutdown behavior
+    needs: [start-runner]
+    runs-on: ${{ needs.start-runner.outputs.label }}
+    steps:
+      - name: set timeout
+        run: |
+          aws ec2 modify-instance-attribute --instance-initiated-shutdown-behavior terminate --instance-id ${{ needs.start-runner-http.outputs.ec2-instance-id }}
 
   stop-runner:
     name: Stop self-hosted EC2 runner
@@ -57,7 +67,7 @@ jobs:
 
   contracts-bedrock-tests:
     name: 'Contract Bedrock test'
-    needs: [start-runner]
+    needs: [start-runner, ec2-update-attribute]
     runs-on: ${{ needs.start-runner.outputs.label }}
     container:
       image: onthertech/thanos-ci-builder:latest
