--- a/.github/workflows/tokamak-contract-bedrock-test.yml
+++ b/.github/workflows/tokamak-contract-bedrock-test.yml
@@ -25,6 +25,7 @@ jobs:
           ec2-instance-type: t4g.2xlarge
           subnet-id: subnet-4aa53021
           security-group-id: sg-03165a21a3ba6e8b3
+          iam-role-name: ec2-runner
           pre-runner-script: shutdown -P +40
       - name: Runner status
         id: status
