--- a/.github/workflows/release-docker-nightly.yml
+++ b/.github/workflows/release-docker-nightly.yml
@@ -167,10 +167,12 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.ACCESS_TOKEN }}
-          ec2-image-id: ami-01bd9dc38789ab007
+          ec2-image-id: ami-01f36d9fbf17b3974
           ec2-instance-type: t4g.2xlarge
           subnet-id: subnet-4aa53021
           security-group-id: sg-03165a21a3ba6e8b3
+          iam-role-name: ec2-runner
+          pre-runner-script: shutdown -P +40
 
       - name: Runner status
         id: status
@@ -198,6 +200,18 @@ jobs:
         id: read
         with:
           matrix-step-name: start-runners
+
+  ec2-update-arm64:
+    name: Update EC2 ${{ fromJson(needs.runners.outputs.result).ec2-instance-id[format('{0}', matrix.number)] }}
+    needs: [runners, version]
+    strategy:
+      matrix:
+        number: [0, 1, 2, 3, 4]
+    runs-on: ${{ fromJson(needs.runners.outputs.result).label[format('{0}', matrix.number)] }}
+    steps:
+      - name: update shutdown behavior
+        run: |
+          aws ec2 modify-instance-attribute --instance-initiated-shutdown-behavior terminate --instance-id ${{ fromJson(needs.runners.outputs.result).ec2-instance-id[format('{0}', matrix.number)] }}
 
   chain-mon-amd64:
     name: Publish ${{ matrix.target }}
@@ -243,7 +257,7 @@ jobs:
 
   chain-mon-arm64:
     name: Publish ${{ matrix.target }}
-    needs: [runners, version]
+    needs: [runners, ec2-update-arm64, version]
     runs-on: ${{ fromJson(needs.runners.outputs.result).label[format('{0}', matrix.number)] }}
     strategy:
       matrix:
