OR-1567 rollback condition

--- a/.github/workflows/tokamak-contract-bedrock-test.yml
+++ b/.github/workflows/tokamak-contract-bedrock-test.yml
@@ -1,5 +1,9 @@
 name: 'Tokamak Contract Bedrock Test'
-on: push
+on:
+  pull_request:
+    paths:
+      - 'op-node/**'
+      - 'packages/tokamak/contracts-bedrock/**'
 
 jobs:
   start-runner:
