--- a/.github/workflows/tokamak-contract-bedrock-test.yml
+++ b/.github/workflows/tokamak-contract-bedrock-test.yml
@@ -1,9 +1,5 @@
 name: 'Tokamak Contract Bedrock Test'
-on:
-  pull_request:
-    paths:
-      - 'op-node/**'
-      - 'packages/tokamak/contracts-bedrock/**'
+on: push
 
 jobs:
   start-runner:
