OR-1569 update condition for e2e test

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,5 +1,14 @@
 name: 'Tokamak End to End Test'
-on: pull_request
+on:
+  pull_request:
+    paths:
+      - 'op-node/**'
+      - 'op-batcher/**'
+      - 'op-proposer/**'
+      - 'op-bindings/**'
+      - 'op-chain-ops/**'
+      - 'op-service/**'
+      - 'packages/tokamak/contracts-bedrock/**'
 
 jobs:
   start-runner-ws:
