--- a/packages/tokamak/contracts-bedrock/tsconfig.json
+++ b/packages/tokamak/contracts-bedrock/tsconfig.json
@@ -4,9 +4,8 @@
     "outDir": "./dist"
   },
   "include": [
-    "deploy-config/**/*",
-    "deploy-config/**/*.json",
+    "deploy-config/*.json",
     "scripts/**/*",
-    "**/*.ts"
+    "*.ts"
   ]
 }
