--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,6 +2,7 @@ name: 'Tokamak End to End Test'
 on:
   pull_request:
     paths:
+      - 'cannon/**'
       - 'op-node/**'
       - 'op-batcher/**'
       - 'op-proposer/**'
