--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       args:
         GIT_COMMIT: "dev"
         GIT_DATE: "0"
-    image:  us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
+    image: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
     entrypoint: ["echo", "build complete"]
 
   l1:
@@ -69,8 +69,8 @@ services:
       context: ../
       dockerfile: ./op-node/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:devnet
+        OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
+    image: onthertech/titan-op-node:${IMAGE_TAG:-latest}
     command: >
       /bin/sh -c "while ! nc -z l1 ${WAITING_L1_PORT:-8545}; do sleep 1; done; echo 'Port is now available' &&
       op-node
@@ -124,8 +124,8 @@ services:
       context: ../
       dockerfile: ./op-proposer/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-proposer:devnet
+        OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
+    image: onthertech/titan-op-proposer:${IMAGE_TAG:-latest}
     ports:
       - "6062:6060"
       - "7302:7300"
@@ -158,8 +158,8 @@ services:
       context: ../
       dockerfile: ./op-batcher/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-stack-go:devnet
-    image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-batcher:devnet
+        OP_STACK_GO_BUILDER: onthertech/titan-op-stack-go:${IMAGE_TAG:-latest}
+    image: onthertech/titan-op-batcher:${IMAGE_TAG:-latest}
     ports:
       - "6061:6060"
       - "7301:7300"
